# brag

./: .gitignore  README.md  howto.md  pyproject.toml
.github/workflows/: tests.yml
src/brag/: __init__.py  cli.py  config.py  models.py  storage.py
test/: __init__.py  conftest.py
test/fixtures/: sample_data.py
test/integration/: __init__.py  test_cli.py
test/unit/: __init__.py  test_config.py  test_models.py  test_storage.py
